[package]
name = "xcb_wgpu_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
xbar_core = { git = "https://github.com/beamiter/xbar_core.git", default-features = false, features = [
    "clock-chrono",
    "logging-flexi",
    "provider-alsa",
    "provider-battery-sysfs",
    "provider-brightnessctl",
    "provider-system",
    "render-cairo",
    "runtime-linux",
    "transport-shared",
] }
libc = "0.2.186"
log = "0.4.33"
cairo-rs = "0.22.0"
pango = "0.22.8"

xcb = "1.7.0"
wgpu = "30.0.0"
raw-window-handle = "0.6.2"
pollster = "1.0.1"
